--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,117 @@
 /*--CSS Shared Font--*/
-body{
-    font-family: 'Merriweather', serif;
+body {
+  font-family: "Merriweather", serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+.background {
+  position: relative;
+  height: 100vh;
+  background-image: url(../resources/Banner\ Image.png);
+  background-size: cover;
+  background-position: center;
+  margin: 25px 50px;
+  border-radius: 5px;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.content {
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  margin: 245px 245px;
+}
+.second-part {
+  color: #f00;
+  text-align: center;
+  justify-content: center;
+  margin: 50px 50px;
+}
+#mega {
+  color: #f00;
+  font-size: 88px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+#pragraph {
+  color: #f00;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+}
+#header {
+  color: #070211;
+  text-align: center;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.third-content {
+  background: -webkit-linear-gradient(
+    90deg,
+    #070211 0%,
+    rgba(7, 2, 17, 0) 100%
+  );
+  background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
+    url("../resources/Vectorrr.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 1320px;
+  height: 600px;
+  display: block;
+  margin: auto;
+}
+.third-div {
+  display: flex;
+  align-items: center;
+}
+.third-header {
+  color: #fff;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 88px;
+  letter-spacing: 7.04px;
+  width: 640px;
+  margin: 126px 0px 24px 126px;
+}
+.third-pragraph{
+color: rgba(255, 255, 255, 0.80);
+font-size: 18px;
+font-weight: 400;
+line-height: 30px; 
+margin: 50px 126px;
+}
+.third-btn{
+color: #d54c4c;
+border: none;
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+cursor: pointer;
+text-transform: uppercase;
+padding: 17px 30px;
+margin: 43px 159px;
+}
+.front-image{
+    display: flex;
+    width: 320px;
+    height: 465px; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 170px 40px 0px;
+}
+.front-img{
+    position: relative;
+    
 }
