--- a/style/style.css
+++ b/style/style.css
@@ -318,3 +318,89 @@ body {
 #subscribe:hover {
   background: rgb(53, 53, 53);
 }
+footer {
+  background: #070211;
+}
+
+.footer {
+  width: 1600px;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
+
+.footer-text {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  margin-top: 120px;
+  margin-bottom: 50px;
+}
+
+hr {
+  background: rgba(255, 255, 255, 0.15);
+  width: 1600px;
+  height: 1px;
+  margin: auto;
+}
+
+.socail-list {
+  width: 1600px;
+  display: block;
+  margin: auto;
+  align-items: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+#images-socail {
+  cursor: pointer;
+  padding-right: 24px;
+  margin: 48px auto;
+  transition: 0.5s all ease-in-out;
+}
+#images-socail:hover{
+  transform: scale(1.5);
+}
+
+.footer-text-recive {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+  margin-top: 50px;
+  margin-bottom: 120px;
+}
+
+.unsubscribe {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  background: #070211;
+  border: none;
+  cursor: pointer;
+  transition: 0.5s all ease-in-out;
+}
+.unsubscribe:hover{
+  color: rgb(203, 141, 141);
+  transform: scale(1.5);
+}
+.footer-text-recive-last{
+  margin-top: 50px;
+  margin-bottom: 120px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px;
+}
+.fa-solid{
+  color: #FFF;
+  margin-right: 10px;
+}
