--- a/style/style.css
+++ b/style/style.css
@@ -72,6 +72,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
   width: 1320px;
   height: 600px;
   display: block;
